<resources>

    <!-- ## General app stuff ## -->
    <string name="app_name">Spindown - MTG Life Tracker</string>

    <!-- ## Game stuff ## -->
    <!--  Button Labels  -->
    <string name="default_life_label">Starting Life</string>
    <string name="string_button_positive">+</string>
    <string name="string_button_negative">-</string>
    <!--  TextViews  -->
    <string name="starting_life">20</string>
    <string name="title_activity_main">Quickstart Game</string>
    <string name="button_game_menu">Menu</string>

    <!-- ## Options stuff ## -->
    <string name="title_reset_game">Reset Game</string>
    <string name="preference_title_edit_starting_life">Starting Life</string>
    <string name="display_mode_label">Enable Dark Mode</string>
    <string name="default_display_mode">Android Default</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="game_header">Game Preferences</string>
    <string name="general_header">General</string>

    <!-- Display Preferences -->
    <string name="display_title">Display Mode</string>

    <!-- Game Preferences -->
    <string name="options_title">Spindown - Settings</string>
    <string name="preference_display_mode_description">Sets the theme of the app.</string>
    <string name="preference_starting_life_summary">Control the starting life value for new games.</string>
    <string name="key_starting_life">starting_life</string>
    <string name="key_reset_game">key_reset_game</string>
    <string name="key_flag_reset_game">key_flag_reset_game</string>
    <string name="key_display_mode">display_mode</string>

    <!-- Die Settings -->
    <string name="key_die_type">die_type</string>
    <string name="key_die_sides">die_sides</string>
    <string name="title_dialog_die_roll">Roll a</string>
    <string name="title_dialog_coin_flip">Flip a</string>
    <string name="title_button_die_roll">?</string>
    <string name="preference_title_die_sides">Die Sides</string>
    <string name="die_roll_animation_duration">950</string>

    <!-- Increment Settings -->
    <string name="key_small_increment">key_small_increment</string>
    <string name="preference_title_small_increment">Small Increment</string>
    <string name="small_increment_value">1</string>
    <string name="preference_summary_small_increment">Number of points gained or lost when \'+\' or \'-\' are pressed.</string>
    <string name="key_large_increment">key_large_increment</string>
    <string name="preference_title_large_increment">Large Increment</string>
    <string name="large_increment_value">5</string>
    <string name="preference_summary_large_increment">Number of points gained or lost when \'+\' or \'-\' are held.</string>
    <string name="error_score_too_high">Score too high!</string>
    <string name="max_score">999999999</string>

    <!-- Multiplayer Game Strings -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="key_player_count">key_player_count</string>
    <string name="title_player_count">Player Count</string>
    <string name="default_player_count">2</string>
    <string name="summary_player_count">Number of players on the table</string>

</resources>
