<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="default_preferences">

    <Preference
        app:key="@string/key_reset_game"
        app:title="Reset"
        app:summary="Reset current game"/>

    <PreferenceCategory app:title="@string/game_header" >

        <CheckBoxPreference
            app:key="@string/key_flag_reset_game"
            app:isPreferenceVisible="false"
            app:defaultValue="false"/>

        <EditTextPreference
            app:key="@string/key_starting_life"
            app:title="@string/preference_title_edit_starting_life"
            app:defaultValue="@string/starting_life"
            app:summary="@string/preference_starting_life_summary" />

        <EditTextPreference
            app:key="@string/key_small_increment"
            app:title="@string/preference_title_small_increment"
            app:defaultValue="@string/small_increment_value"
            app:summary="@string/preference_summary_small_increment" />

        <EditTextPreference
            app:key="@string/key_large_increment"
            app:title="@string/preference_title_large_increment"
            app:defaultValue="@string/large_increment_value"
            app:summary="@string/preference_summary_large_increment" />

        <ListPreference
            app:key="@string/key_die_sides"
            app:title="@string/preference_title_die_sides"
            app:defaultValue="6"
            app:summary="Choose how many sides on your die"
            app:entries="@array/die_side_labels"
            app:entryValues="@array/die_side_values" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_header" >

        <ListPreference
            app:defaultValue="key_system_default"
            app:entries="@array/display_modes"
            app:entryValues="@array/display_values"
            app:key="@string/key_display_mode"
            app:title="@string/display_title"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/preference_display_mode_description" />

    </PreferenceCategory>

</PreferenceScreen>